--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.17.0",
     "@types/dotenv": "^8.2.0",
     "coinbase": "^2.0.8",
     "coinbase-pro-node": "^2.18.0",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.28",
     "jsonwebtoken": "^8.5.1",
+    "prisma": "^2.17.0",
     "tslint": "^6.1.3",
     "typescript": "^4.1.5"
   }
