adding tsed and auth flow

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tradebot-node",
   "version": "1.0.0",
   "description": "Node server to handle autonomous crypto trading",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node --inspect=5858 -r ts-node/register ./src/server.ts",
+    "start": "node --inspect=5858 -r ts-node/register ./src/index.ts",
     "start:watch": "nodemon --watch src -e ts,js,json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,16 +12,30 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.17.0",
+    "@tsed/common": "^6.26.1",
+    "@tsed/core": "^6.26.1",
+    "@tsed/di": "^6.26.1",
+    "@tsed/exceptions": "^6.26.1",
+    "@tsed/json-mapper": "^6.26.1",
+    "@tsed/passport": "^6.26.1",
+    "@tsed/platform-express": "^6.26.1",
+    "@tsed/schema": "^6.26.1",
     "@types/dotenv": "^8.2.0",
     "coinbase": "^2.0.8",
     "coinbase-pro-node": "^2.18.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "kraken-api": "^1.0.1",
+    "method-override": "^3.0.0",
     "node-bitstamp": "^3.0.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
