--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tsed/platform-express": "^6.26.1",
     "@tsed/schema": "^6.26.1",
     "@types/dotenv": "^8.2.0",
+    "bee-queue": "^1.3.1",
     "coinbase": "^2.0.8",
     "coinbase-pro-node": "^2.18.0",
     "compression": "^1.7.4",
