lots of changes. cleaning up sync logic. adding web socket updates to user

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "lib": ["es2016", "dom", "esnext"],
+    "paths": {
+      "trade_bot": ["./typings"]
+    },
     "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src/**/*.ts"],
