--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tsed/passport": "^6.26.1",
     "@tsed/platform-express": "^6.26.1",
     "@tsed/schema": "^6.26.1",
+    "@tsed/socketio": "^6.38.1",
     "@types/dotenv": "^8.2.0",
+    "@types/socket.io": "^2.1.13",
     "bee-queue": "^1.3.1",
     "coinbase": "^2.0.8",
     "coinbase-pro-node": "^2.18.0",
@@ -33,10 +35,11 @@
     "express": "^4.17.1",
     "kraken-api": "^1.0.1",
     "method-override": "^3.0.0",
-    "node-bitstamp": "^3.0.0",
+    "node-bitstamp": "git://github.com/crob/node-bitstamp.git",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "socket.io": "^4.0.1",
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
